[project]
name = "django-athumb"
version = "5.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django>=3.2.25",
    "django-storages[s3]>=1.14.6",
    "pillow>=11.3.0",
    "setuptools>=80.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.7",
]
